--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1205,7 +1205,7 @@ jobs:
 
     strategy:
       matrix:
-        gpu_target: [gfx1100, gfx1101, gfx1030]
+        gpu_target: [gfx1010]
 
     steps:
       - name: Clone
